# SimpleRustWebService

./: README.md
cars_client/: Cargo.toml
cars_client/src/: main.rs
cars_client/static/root/: index.html  test.html
cars_service/: Cargo.toml  cars.json
cars_service/src/: main.rs
