[package]
name = "cars_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"
serde = "1"
serde_json = "1.0.59"
futures = "0.3.17"
actix-cors = "0.5.4"

[dev-dependencies]
actix-rt = "1"
